--- a/package.json
+++ b/package.json
@@ -5,28 +5,41 @@
   "type": "module",
   "scripts": {
     "build": "next build",
-    "db:push": "drizzle-kit push:mysql",
-    "db:studio": "drizzle-kit studio",
+    "db:push": "dotenv drizzle-kit push:pg",
+    "db:studio": "dotenv drizzle-kit studio",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^0.3.6",
+    "@midudev/tailwind-animations": "^0.0.7",
+    "@neondatabase/serverless": "^0.9.0",
     "@planetscale/database": "^1.11.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.43.6",
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "drizzle-orm": "^0.29.3",
+    "drizzle-zod": "^0.5.1",
+    "embla-carousel-auto-scroll": "^8.0.0",
+    "embla-carousel-autoplay": "^8.0.0",
+    "embla-carousel-react": "^8.0.0",
+    "embla-carousel-wheel-gestures": "8.0.0-rc05",
+    "lucide-react": "^0.358.0",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.1",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -37,6 +50,7 @@
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
     "autoprefixer": "^10.4.14",
+    "dotenv-cli": "^7.4.1",
     "drizzle-kit": "^0.20.9",
     "eslint": "^8.54.0",
     "eslint-config-next": "^14.0.4",
@@ -44,6 +58,7 @@
     "postcss": "^8.4.31",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
+    "tailwind-merge": "^2.2.2",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.1.6"
   },
