--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^0.3.6",
+    "@googlemaps/react-wrapper": "^1.1.35",
     "@midudev/tailwind-animations": "^0.0.7",
     "@neondatabase/serverless": "^0.9.0",
     "@planetscale/database": "^1.11.0",
@@ -44,6 +45,7 @@
   },
   "devDependencies": {
     "@types/eslint": "^8.44.7",
+    "@types/google.maps": "^3.55.5",
     "@types/node": "^18.17.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
