--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^0.3.6",
     "@googlemaps/react-wrapper": "^1.1.35",
+    "@hookform/resolvers": "^3.3.4",
     "@midudev/tailwind-animations": "^0.0.7",
     "@neondatabase/serverless": "^0.9.0",
     "@planetscale/database": "^1.11.0",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
@@ -33,7 +35,7 @@
     "embla-carousel-react": "^8.0.0",
     "embla-carousel-wheel-gestures": "8.0.0-rc05",
     "lucide-react": "^0.358.0",
-    "next": "^14.0.4",
+    "next": "^14.1.4",
     "next-auth": "^4.24.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
