--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@neondatabase/serverless": "^0.9.0",
     "@planetscale/database": "^1.11.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.43.6",
@@ -37,10 +39,12 @@
     "lucide-react": "^0.358.0",
     "next": "^14.1.4",
     "next-auth": "^4.24.5",
+    "next-themes": "^0.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.1",
     "server-only": "^0.0.1",
+    "sonner": "^1.4.41",
     "superjson": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
