--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "next-auth": "^4.24.5",
     "next-themes": "^0.3.0",
     "react": "18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.1",
     "server-only": "^0.0.1",
@@ -63,6 +64,7 @@
     "eslint": "^8.54.0",
     "eslint-config-next": "^14.0.4",
     "mysql2": "^3.6.1",
+    "pg": "^8.11.3",
     "postcss": "^8.4.31",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
