--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@midudev/tailwind-animations": "^0.0.7",
     "@neondatabase/serverless": "^0.9.0",
     "@planetscale/database": "^1.11.0",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
@@ -27,6 +30,7 @@
     "@react-email/html": "^0.0.7",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-table": "^8.15.3",
     "@trpc/client": "^10.43.6",
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
