--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@auth/drizzle-adapter": "^0.3.6",
     "@googlemaps/react-wrapper": "^1.1.35",
     "@hookform/resolvers": "^3.3.4",
-    "@midudev/tailwind-animations": "^0.0.7",
     "@neondatabase/serverless": "^0.9.0",
     "@planetscale/database": "^1.11.0",
     "@radix-ui/react-accordion": "^1.1.2",
@@ -45,6 +44,7 @@
     "clsx": "^2.1.0",
     "drizzle-orm": "^0.29.3",
     "drizzle-zod": "^0.5.1",
+    "embla-carousel": "8.0.0",
     "embla-carousel-auto-scroll": "^8.0.0",
     "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
@@ -56,6 +56,7 @@
     "next-themes": "^0.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-email": "^2.1.6",
     "react-hook-form": "^7.51.1",
     "resend": "^3.2.0",
     "server-only": "^0.0.1",
