--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "embla-carousel-react": "^8.0.0",
     "embla-carousel-wheel-gestures": "8.0.0-rc05",
     "export-to-csv": "^1.3.0",
+    "googleapis": "^142.0.0",
     "lucide-react": "^0.358.0",
     "next": "^14.1.4",
     "next-auth": "^4.24.5",
@@ -63,6 +64,7 @@
     "sonner": "^1.4.41",
     "superjson": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
